# phasefuncnn

./: .gitattributes  .gitignore  README.md  Snakefile  build_bin.py  build_contacts.py  build_jointpva.py  build_jposdir.py  build_tensors.py  build_traj.py  build_vels.py  build_xforms.py  bvh_to_xforms.py  bvh_util.py  char_vis.py  check_skeleton.py  datalens.py  dataview.py  dodo.py  flycam.py  followcam.py  inference.py  math_util.py  mirror_bvh.py  normalize_tensors.py  pfnn.py  preprocess.py  pyproject.toml  pyrightconfig.json  renderbuddy.py  requirements.txt  skeleton.py  skeleton_mesh.py  train.py  verify_skeleton.py  vis_character.py  vis_check.py  vis_input.py  vis_mocap.py  vis_output.py  (+2 more)
data/: xbot-walk.glb
data/checkpoint/: X_mean.pth  X_std.pth  X_w.pth  Y_mean.pth  Y_std.pth  skeleton.pkl
mocap/: __init__.py  build_vels.py  build_xforms.py  bvh_util.py  skeleton.py  util.py
pipeline/: Snakefile
preprocess/: __init__.py  build_input.py  visualize_input.py
