[project]
name = "phasefuncnn"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "bvh>=0.3",
    "bvhio>=1.5.4",
    "glfw>=2.10.0",
    "gltflib>=1.0.13",
    "numpy>=2.3.3",
    "pygame>=2.6.1",
    "pygfx>=0.15.0",
    "snakemake>=9.13.7",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "tqdm>=4.65.5",
]
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
